# qualisys_python_IO

./: .gitignore  README.md  lib.py  main.py  pyproject.toml  qualisys_io.py  run_test.py  setup.py
qualisys_tools/: __init__.py
qualisys_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Qualisys_Python_IO/: __init__.py  qualisys_tools.py
